<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/input_ingredient_name"
        android:hint="@string/ingredient"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <Spinner
        android:id="@+id/spinner_unit"
        android:prompt="@string/choose_unit"

        android:layout_width="80dp"
        android:layout_height="20dp"/>
    <EditText
        android:id="@+id/input_ingredient_amount"
        android:hint="@string/amount"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>