<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".features.addrecipe.EnterRecipeFragment">

    <TextView
        android:text="@string/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/input_recipe_title"
        android:hint="@string/enter_title"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/button_save_recipe"
        android:text="@string/save"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>
