<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".features.addrecipe.NewRecipeFragment">

    <TextView
        android:text="@string/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/input_recipe_title"
        android:hint="@string/enter_title"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/ingredients"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:id="@+id/ingredient_input_wrapper"

        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <include android:id="@+id/ingredient_input_1" layout="@layout/new_ingredient"/>
        <include android:id="@+id/ingredient_input_2" layout="@layout/new_ingredient"/>
        <include android:id="@+id/ingredient_input_3" layout="@layout/new_ingredient"/>
    </LinearLayout>

    <Button
        android:id="@+id/button_save_recipe"
        android:text="@string/save"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>
