<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:descendantFocusability="afterDescendants"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ViewSwitcher
        android:id="@+id/list_item_view_switcher"

        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/list_item_text"

                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"

                android:layout_marginTop="12dp"

                android:textSize="16sp"/>
            <Button
                android:id="@+id/button_edit"
                android:text="@string/edit"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <EditText
                android:id="@+id/list_item_edittext"

                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"

                android:textSize="16sp"/>
            <Button
                android:id="@+id/button_update"
                android:text="@string/save"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </ViewSwitcher>

    <Button
        android:id="@+id/button_delete"
        android:text="@string/delete"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>